# Provision-devs

./: .gitignore  LICENSE  Pipfile  README.md  macos.yml  pyproject.toml  site.yml
roles/archivers/vars/: main.yml
roles/computer_languages/vars/: main.yml
roles/device_drivers/vars/: main.yml
roles/editors/vars/: main.yml
roles/extend_displays/vars/: main.yml
roles/ftp_clients/vars/: main.yml
roles/games/vars/: main.yml
roles/input_methods/vars/: main.yml
roles/mobile_apps_ides/vars/: main.yml
roles/multimedia_players/vars/: main.yml
roles/office_suites/vars/: main.yml
roles/os-level_virtualisations/meta/: main.yml
roles/os-level_virtualisations/vars/: main.yml
roles/package_manager/defaults/: main.yml
roles/package_manager/tasks/: macosx.yml  main.yml
roles/package_manager/vars/: main.yml
roles/remote_desktop_clients/vars/: main.yml
roles/repository_clients/vars/: main.yml
roles/setup_packages/defaults/: main.yml
roles/setup_packages/tasks/: macosx.yml  main.yml
roles/terminal_emulators/vars/: main.yml
roles/virtual_drives/vars/: main.yml
roles/virtual_machines/vars/: main.yml
roles/web_browsers/vars/: main.yml
scripts/mas/: main.sh
scripts/preprovision/: export_envs.sh  install_app.sh  macos.sh  main.sh  update_app.sh
scripts/provision/: act.py  main.py  systems.yml
