[tool.poetry]
name = "provision_devs"
version = "0.1.0"
description = "script for setup a localhost for developping"
authors = ["sugawara <takashi.sugawara.1980@gmail.com>"]
license = "MIT"

readme = "README.md"

keywords = ["ansible"]

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^5.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.4"
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
